Added statcast_pitcher route
